Added new tag 1.0.1

--- a/.github/workflows/aws-check-login.yaml
+++ b/.github/workflows/aws-check-login.yaml
@@ -9,12 +9,12 @@ jobs:
 
     steps:
       - name: 🕒 Show current date and time
-        uses: VKalenski/GitHub-Actions-Templates/.github/actions/show-time@main
+        uses: VKalenski/GitHub-Actions-Templates/.github/actions/show-time@1.0.1
         with:
           format: 'short'
 
       - name: 🔑 Set up AWS credentials
-        uses: VKalenski/GitHub-Actions-Templates/.github/actions/aws-login@main
+        uses: VKalenski/GitHub-Actions-Templates/.github/actions/aws-login@1.0.1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
