--- a/.github/workflows/aws-start-ec2.yaml
+++ b/.github/workflows/aws-start-ec2.yaml
@@ -15,7 +15,7 @@ jobs:
           echo "🌍 Timezone: $(date +'%Z')"
 
       - name: 🔑 Set up AWS credentials
-        uses: VKalenski/GitHub-Actions-Templates/.github/actions/aws-login@main
+        uses: VKalenski/GitHub-Actions-Templates/.github/actions/aws-login@1.0.1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
