--- a/.github/workflows/aws-clean.yaml
+++ b/.github/workflows/aws-clean.yaml
@@ -22,7 +22,7 @@ jobs:
         pip install boto3 tabulate
 
     - name: 🔑 Set up AWS credentials
-      uses: VKalenski/GitHub-Actions-Templates/.github/actions/aws-login@main
+      uses: VKalenski/GitHub-Actions-Templates/.github/actions/aws-login@1.0.1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
