--- a/.github/workflows/dotnet-trivy.yaml
+++ b/.github/workflows/dotnet-trivy.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # releases v5.0.0
 
       - name: Build and Push Docker Image
-        uses: VKalenski/GitHub-Actions-Templates/.github/actions/dotnet-docker@main
+        uses: VKalenski/GitHub-Actions-Templates/.github/actions/dotnet-docker@1.0.1
         with:
           docker-hub-account: ${{ inputs.docker-hub-account }}
           image-name: ${{ inputs.image-name }}
@@ -50,7 +50,7 @@ jobs:
           docker-password: ${{ inputs.docker-password }}
 
       - name: Scan with Trivy
-        uses: VKalenski/GitHub-Actions-Templates/.github/actions/dotnet-trivy@main
+        uses: VKalenski/GitHub-Actions-Templates/.github/actions/dotnet-trivy@1.0.1
         with:
           docker-hub-account: ${{ inputs.docker-hub-account }}
           image-name: ${{ inputs.image-name }}
