--- a/TestFiles/product/product-4-0-0/charts/file-two.yaml
+++ b/TestFiles/product/product-4-0-0/charts/file-two.yaml
@@ -1,12 +1,10 @@
-product-4-0-0:
-  product:
-    product-main-srv:
-      shmplm-base-helm-chart:
+kalenski-4-0-0:
+  kalenski:
+    kalenski-main-srv:
+      kalenski-base-helm-chart:
         deployment:
           resources:
             requests:
               memory: "200Mi"
             limits:
               memory: "350Mi"
-        ingress:
-          path: /test-us-product-4-0-0/product-srv(/|$)(.*)
